--- a/aws/sagemaker/deepseekmath/deploy.ipynb
+++ b/aws/sagemaker/deepseekmath/deploy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "613473db",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "Role ARN: arn:aws:iam::673671551738:role/service-role/SageMaker-smaker_cli\n",
-      "{'Endpoints': [], 'ResponseMetadata': {'RequestId': '9ea232d8-775d-4fae-b013-13643e54e6c8', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '9ea232d8-775d-4fae-b013-13643e54e6c8', 'content-type': 'application/x-amz-json-1.1', 'content-length': '16', 'date': 'Sun, 01 Jun 2025 06:54:39 GMT'}, 'RetryAttempts': 0}}\n"
+      "{'Endpoints': [], 'ResponseMetadata': {'RequestId': '610613b5-8c58-47be-9003-40fbda7799dc', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '610613b5-8c58-47be-9003-40fbda7799dc', 'content-type': 'application/x-amz-json-1.1', 'content-length': '16', 'date': 'Mon, 02 Jun 2025 04:27:48 GMT'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "cb561b45",
    "metadata": {},
    "outputs": [
@@ -58,6 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/xdg-ubuntu/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/nachiketa/.config/sagemaker/config.yaml\n",
       "sagemaker role arn: arn:aws:iam::673671551738:role/service-role/SageMaker-smaker_cli\n",
       "sagemaker bucket: sagemaker-us-east-1-673671551738\n",
       "sagemaker session region: us-east-1\n"
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "3025049c",
    "metadata": {},
    "outputs": [
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "195242ae",
    "metadata": {},
    "outputs": [
@@ -126,6 +128,160 @@
     "img_uri = image_uris.retrieve(framework=\"djl-deepspeed\", region=region, version=\"0.21.0\")\n",
     "print(img_uri)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa0d394",
+   "metadata": {},
+   "source": [
+    "Create the script to create the model from s3 bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "02a383f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model.py\n",
+    "\n",
+    "from djl_python import Input, Output\n",
+    "import os\n",
+    "import deepspeed\n",
+    "import torch\n",
+    "from transformers import pipeline, AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "predictor = None\n",
+    "\n",
+    "\n",
+    "def get_model(properties):\n",
+    "    model_name = \"s3://deepseek-math-7b/\"\n",
+    "    tensor_parallel = properties[\"tensor_parallel_degree\"]\n",
+    "    local_rank = int(os.getenv(\"LOCAL_RANK\", \"0\"))\n",
+    "    model = AutoModelForCausalLM.from_pretrained(\n",
+    "        model_name, revision=\"float32\", torch_dtype=torch.float32\n",
+    "    )\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "    model = deepspeed.init_inference(\n",
+    "        model,\n",
+    "        mp_size=tensor_parallel,\n",
+    "        dtype=model.dtype,\n",
+    "        replace_method=\"auto\",\n",
+    "        replace_with_kernel_inject=True,\n",
+    "    )\n",
+    "    generator = pipeline(\n",
+    "        task=\"text-generation\", model=model, tokenizer=tokenizer, device=local_rank\n",
+    "    )\n",
+    "    return generator\n",
+    "\n",
+    "\n",
+    "def handle(inputs: Input) -> None:\n",
+    "    global predictor\n",
+    "    if not predictor:\n",
+    "        predictor = get_model(inputs.get_properties())\n",
+    "\n",
+    "    if inputs.is_empty():\n",
+    "        # Model server makes an empty call to warmup the model on startup\n",
+    "        return None\n",
+    "\n",
+    "    data = inputs.get_as_string()\n",
+    "    result = predictor(data, do_sample=True, max_new_tokens=256)\n",
+    "    return Output().add(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "583bb482",
+   "metadata": {},
+   "source": [
+    "### Serving properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e472f73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing serving.properties\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile serving.properties\n",
+    "engine = DeepSpeed\n",
+    "option.tensor_parallel_degree = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28c238cb",
+   "metadata": {},
+   "source": [
+    "compress the model and serving properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e3456e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dsk-r/\n",
+      "dsk-r/serving.properties\n",
+      "dsk-r/model.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "if [ -d dsk-r ]; then\n",
+    "  rm -d -r dsk-r\n",
+    "fi #always start fresh\n",
+    "\n",
+    "mkdir -p dsk-r\n",
+    "mv model.py dsk-r\n",
+    "mv serving.properties dsk-r\n",
+    "tar -czvf dsk-r.tar.gz dsk-r/\n",
+    "#aws s3 cp dsk-r.tar.gz {path}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ec418ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upload the compressed folder to the s3 location\n",
+    "model_tar_url = sagemaker.s3.S3Uploader.upload(\"dsk-r.tar.gz\", s3_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b37a72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
